# Dev

./: README.md  build.VPDroid-1.prop  build.VPDroid-2.prop  build.VPDroid-3.prop  build.VPDroid.cell2.prop  build.VPDroid.cell3.prop  build.VPDroid.prop  kernel-modify-config  share-services
system/bt/: .gitignore  .gn  Android.bp  AndroidTestTemplate.xml  BUILD.gn  CleanSpec.mk  EventLogTags.logtags  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING
system/bt/audio_a2dp_hw/: Android.bp
system/bt/audio_a2dp_hw/include/: audio_a2dp_hw.h
system/bt/audio_a2dp_hw/src/: audio_a2dp_hw.cc  audio_a2dp_hw_utils.cc
system/bt/audio_a2dp_hw/test/: audio_a2dp_hw_test.cc
system/bt/audio_bluetooth_hw/: Android.bp  audio_bluetooth_hw.cc  device_port_proxy.cc  device_port_proxy.h  stream_apis.cc  stream_apis.h  utils_unittest.cc
system/bt/audio_hal_interface/: Android.bp  a2dp_encoding.cc  a2dp_encoding.h  client_interface.cc  client_interface.h  client_interface_unittest.cc  hearing_aid_software_encoding.cc  hearing_aid_software_encoding.h
system/bt/audio_hearing_aid_hw/: Android.bp
system/bt/audio_hearing_aid_hw/include/: audio_hearing_aid_hw.h
system/bt/audio_hearing_aid_hw/src/: audio_hearing_aid_hw.cc  audio_hearing_aid_hw_utils.cc
system/bt/audio_hearing_aid_hw/test/: audio_hearing_aid_hw_test.cc
system/bt/binder/: Android.bp
system/bt/bta/: Android.bp  BUILD.gn
system/bt/bta/ag/: bta_ag_act.cc  bta_ag_api.cc  bta_ag_at.cc  bta_ag_at.h  bta_ag_cfg.cc  bta_ag_cmd.cc  bta_ag_int.h  bta_ag_main.cc  bta_ag_rfc.cc  bta_ag_sco.cc  bta_ag_sdp.cc
system/bt/bta/ar/: bta_ar.cc  bta_ar_int.h
system/bt/bta/av/: bta_av_aact.cc  bta_av_act.cc  bta_av_api.cc  bta_av_cfg.cc  bta_av_ci.cc  bta_av_int.h  bta_av_main.cc  bta_av_ssm.cc
system/bt/bta/dm/: bta_dm_act.cc  bta_dm_api.cc  bta_dm_cfg.cc  bta_dm_ci.cc  bta_dm_int.h  bta_dm_main.cc  bta_dm_pm.cc
system/bt/bta/gatt/: bta_gattc_act.cc  bta_gattc_api.cc  bta_gattc_cache.cc  bta_gattc_int.h  bta_gattc_main.cc  bta_gattc_queue.cc  bta_gattc_utils.cc  bta_gatts_act.cc  bta_gatts_api.cc  bta_gatts_int.h  bta_gatts_main.cc  bta_gatts_utils.cc  database.cc  database.h  database_builder.cc  database_builder.h
system/bt/bta/hd/: bta_hd_act.cc  bta_hd_api.cc  bta_hd_int.h  bta_hd_main.cc
system/bt/bta/hearing_aid/: hearing_aid.cc  hearing_aid_audio_source.cc
system/bt/bta/hf_client/: bta_hf_client_act.cc  bta_hf_client_api.cc  bta_hf_client_at.cc  bta_hf_client_at.h  bta_hf_client_int.h  bta_hf_client_main.cc  bta_hf_client_rfc.cc  bta_hf_client_sco.cc  bta_hf_client_sdp.cc
system/bt/bta/hh/: bta_hh_act.cc  bta_hh_api.cc  bta_hh_cfg.cc  bta_hh_int.h  bta_hh_le.cc  bta_hh_main.cc  bta_hh_utils.cc
system/bt/bta/hl/: bta_hl_main.cc
system/bt/bta/include/: bta_ag_api.h  bta_api.h  bta_ar_api.h  bta_av_api.h  bta_av_ci.h  bta_av_co.h  bta_dm_api.h  bta_dm_ci.h  bta_dm_co.h  bta_gatt_api.h  bta_gatt_queue.h  bta_gatts_co.h  bta_hd_api.h  bta_hearing_aid_api.h  bta_hf_client_api.h  bta_hh_api.h  bta_hh_co.h  bta_jv_api.h  bta_jv_co.h  bta_mce_api.h  bta_op_api.h  bta_pan_api.h  bta_pan_ci.h  bta_pan_co.h  bta_sdp_api.h  utl.h
system/bt/bta/jv/: bta_jv_act.cc  bta_jv_api.cc  bta_jv_cfg.cc  bta_jv_int.h
system/bt/bta/mce/: bta_mce_act.cc  bta_mce_api.cc  bta_mce_cfg.cc  bta_mce_int.h  bta_mce_main.cc
system/bt/bta/pan/: bta_pan_act.cc  bta_pan_api.cc  bta_pan_ci.cc  bta_pan_int.h  bta_pan_main.cc
system/bt/bta/pb/: bta_pbs_int.h
system/bt/bta/sdp/: bta_sdp.cc  bta_sdp_act.cc  bta_sdp_api.cc  bta_sdp_cfg.cc  bta_sdp_int.h
system/bt/bta/sys/: bta_sys.h  bta_sys_conn.cc  bta_sys_int.h  bta_sys_main.cc  utl.cc
system/bt/bta/test/: bta_hf_client_test.cc
system/bt/btcore/: Android.bp  BUILD.gn
system/bt/btcore/include/: hal_util.h  (+8 more)
system/bt/btif/: Android.bp  BUILD.gn
system/bt/common/: Android.bp  BUILD.gn  address_obfuscator.cc  address_obfuscator.h  address_obfuscator_unittest.cc  id_generator.h  id_generator_unittest.cc  leaky_bonded_queue.h  leaky_bonded_queue_unittest.cc  message_loop_thread.cc  message_loop_thread.h  message_loop_thread_unittest.cc  metrics.cc  metrics.h  metrics_linux.cc  metrics_unittest.cc  once_timer.cc  once_timer.h  once_timer_unittest.cc  repeating_timer.cc  repeating_timer.h  repeating_timer_unittest.cc  state_machine.h  state_machine_unittest.cc  time_util.cc  time_util.h  time_util_unittest.cc
system/bt/conf/: Android.bp  bt_did.conf  bt_stack.conf
system/bt/device/: Android.bp  BUILD.gn
system/bt/doc/: btsnoop_net.md  directory_layout.md  log_tags.md  network_ports.md  power_management.md  properties.md  pts_guide.md  style_guide.md  supported_features.md
system/bt/gd/: Android.bp  TEST_MAPPING  benchmark.cc
system/bt/hci/: Android.bp  BUILD.gn
system/bt/include/: Android.bp
system/bt/internal_include/: Android.bp  bt_common.h  bt_target.h  bt_trace.h  bte.h  bte_appl.h  stack_config.h
system/bt/main/: Android.bp  BUILD.gn  bte_conf.cc  bte_init.cc  bte_init_cpp_logging.cc  bte_logmsg.cc  bte_main.cc  main_int.h  stack_config.cc
system/bt/osi/: Android.bp  BUILD.gn
system/bt/packet/: Android.bp  BUILD.gn
system/bt/proto/: Android.bp
system/bt/service/: Android.bp  BUILD.gn  a2dp_sink.cc  a2dp_sink.h  a2dp_source.cc  a2dp_source.h  adapter.cc  adapter.h  avrcp_control.cc  avrcp_control.h  avrcp_target.cc  avrcp_target.h  bluetooth_instance.h  bluetoothtbd.rc  daemon.cc  daemon.h  gatt_client.cc  gatt_client.h  gatt_server.cc  gatt_server.h  gatt_server_old.cc  gatt_server_old.h  logging_helpers.cc  logging_helpers.h  low_energy_advertiser.cc  low_energy_advertiser.h  low_energy_client.cc  low_energy_client.h  low_energy_scanner.cc  low_energy_scanner.h  main.cc  settings.cc  settings.h  switches.h
system/bt/stack/: Android.bp  BUILD.gn
system/bt/test/: Android.bp  README.md  gen_coverage.py  run_benchmarks.sh  run_host_unit_tests.py  run_unit_tests.sh
system/bt/types/: Android.bp  BUILD.gn  class_of_device.cc  raw_address.cc  raw_address.h
system/bt/udrv/: Android.bp  BUILD.gn
system/bt/utils/: Android.bp  BUILD.gn
system/bt/vendor_libs/: Android.bp
(+8943 files in other folders)
