#
#  Copyright 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

config("libbluetooth_config") {
  include_dirs = [
    "../include",
  ]
}

shared_library("bluetooth") {

  # HAL layer
  sources = [
    "//btif/src/bluetooth.cc",
  ]

  # platform specific
  sources += [
    "bte_conf.cc",
    "bte_init.cc",
    "bte_init_cpp_logging.cc",
    "bte_logmsg.cc",
    "bte_main.cc",
    "stack_config.cc",
  ]

  public_configs = [ ":libbluetooth_config" ]

  include_dirs = [
    "//",
    "//bta/include",
    "//bta/sys",
    "//bta/dm",
    "//btcore/include",
    "//internal_include",
    "//stack/include",
    "//stack/l2cap",
    "//stack/a2dp",
    "//stack/btm",
    "//stack/avdt",
    "//hci",
    "//hci/include",
    "//udrv/include",
    "//btif/include",
    "//btif/co",
    "//hci/includ",
    "//vnd/include",
    "//brcm/include",
    "//embdrv/sbc/encoder/include",
    "//embdrv/sbc/decoder/include",
    "//utils/include",
    "//test/suite",
  ]

  deps = [
    "//bta",
    "//btcore",
    "//btif",
    "//device",
    "//embdrv/g722",
    "//embdrv/sbc",
    "//hci",
    "//osi",
    "//packet",
    "//stack",
    "//third_party/libchrome:base",
    "//third_party/tinyxml2",
    "//udrv",
    "//utils",
  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]
  libs = [
    "-ldl",
    "-lpthread",
    "-lresolv",
    "-lrt",
    "-lz",
    "-latomic",
  ]
}
