#
#  Copyright 2018 Android Open Source Project
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

static_library("packet") {
  sources = [
    "avrcp/get_folder_items.cc",
    "avrcp/register_notification_packet.cc",
    "avrcp/change_path.cc",
    "avrcp/get_total_number_of_items.cc",
    "avrcp/capabilities_packet.cc",
    "avrcp/pass_through_packet.cc",
    "avrcp/set_browsed_player.cc",
    "avrcp/avrcp_reject_packet.cc",
    "avrcp/set_absolute_volume.cc",
    "avrcp/avrcp_packet.cc",
    "avrcp/get_element_attributes_packet.cc",
    "avrcp/get_play_status_packet.cc",
    "avrcp/general_reject_packet.cc",
    "avrcp/avrcp_browse_packet.cc",
    "avrcp/get_item_attributes.cc",
    "avrcp/play_item.cc",
    "avrcp/vendor_packet.cc",
    "avrcp/set_addressed_player.cc",
    "base/iterator.cc",
    "base/packet.cc",
    "base/packet_builder.cc",
 ]

  include_dirs = [
    "//",
    "//internal_include",
    "//stack/include",
    "//profile/avrcp",
  ]

  deps = [
    "//third_party/libchrome:base"
  ]
}
